cloud/istio/istio_publish/kubia-v2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: kubia
  name: kubia-v2
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
        app: kubia
        version: v2
  template:
    metadata:
      labels:
        app: kubia
        version: v2
    spec:
      containers:
      - name: kubia
        image: registry.cn-shenzhen.aliyuncs.com/haoyu36/kubia8080-v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: port
          containerPort: 8080
